<resources>
    <string-array name="frequency_array">
        <item>1 Day</item>
        <item>2 Days</item>
        <item>3 Days</item>
        <item>4 Days</item>
        <item>5 Days</item>
        <item>6 Days</item>
        <item>7 Days</item>
    </string-array>

    <string name="app_name">Flexi</string>

    <string name="today">Today -  </string>
    <string name="completed">Completed</string>

    <string name="obj_name">Name</string>
    <string name="obj_description">Description</string>
    <string name="obj_effort">Effort</string>
    <string name="obj_hours">Hours</string>
    <string name="obj_minutes">Minutes</string>
    <string name="obj_frequency">Frequency</string>
    <string name="obj_timeblock">Time Block</string>

    <string name="block_name">Name</string>
    <string name="block_description">Description</string>
    <string name="block_starttime">Start Time</string>
    <string name="block_endtime">End Time</string>

    <string name="obj_card_name_example">Construct Additional Pylons</string>
    <string name="obj_card_description_example">You must Construct Additional Pylons</string>
    <string name="obj_card_effort_example">Easy</string>
    <string name="obj_card_duration_example">05:00</string>
    <string name="obj_card_frequency_example">Reoccurs: Every 10 minutes</string>
    <string name="obj_card_timeblock_example">Morning</string>

    <string name="new_timeblock">New Timeblock</string>
    <string name="objective_list">Objective List</string>
    <string name="timeblock_list">Timeblock List</string>
    <string name="settings">Settings</string>

    <string name="nav_header">Flexi</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="end_task">End Task</string>
    <string name="add_5_minutes"> +5 min </string>
    <string name="add_10_minutes"> +10 min </string>

</resources>
