<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cl_objectivePage"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/sv_objectivePage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/ll_objectivePage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/et_ObjName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/obj_name"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/et_ObjDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/obj_description"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/et_ObjEffort"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/obj_effort"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/et_ObjDuration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/obj_duration"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/tv_ObjFrequency"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/obj_frequency"
                android:textAlignment="center" />

            <Spinner
                android:id="@+id/sp_ObjFrequency"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tv_ObjTimeBlock"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/obj_timeblock"
                android:textAlignment="center" />

            <Spinner
                android:id="@+id/sp_ObjTimeBlock"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onClickSaveObjective"
                android:text="Save" />

        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>